<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013-2016 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Gesture shortcuts -->
    <string name="gesture_display_title">Screen off gestures</string>

    <string name="touchscreen_c_gesture_title">Camera</string>
    <string name="touchscreen_c_gesture_summary">Draw a \"C\" to activate camera</string>
    <string name="touchscreen_e_gesture_title">Email</string>
    <string name="touchscreen_e_gesture_summary">Draw an \"e\" to open the email app</string>
    <string name="touchscreen_m_gesture_title">Messaging</string>
    <string name="touchscreen_m_gesture_summary">Draw a \"M\" to open the messaging app</string>
    <string name="touchscreen_w_gesture_title">Browser</string>
    <string name="touchscreen_w_gesture_summary">Draw a \"W\" to open the browser app</string>

    <string name="fp_display_title">Fingerprint gestures</string>

    <string name="fp_gesture_tap_title">Tap</string>
    <string name="fp_gesture_tap_summary">Tap to do something</string>
    <string name="fp_gesture_double_tap_title">Double-Tap</string>
    <string name="fp_gesture_double_tap_summary">Double-Tap to do something</string>
    <string name="fp_gesture_hold_title">Hold</string>
    <string name="fp_gesture_hold_summary">Hold to do something</string>
    <string name="fp_gesture_down_title">Swipe down</string>
    <string name="fp_gesture_down_summary">Swipe down to expand the status bar</string>
    <string name="fp_gesture_up_title">Swipe up</string>
    <string name="fp_gesture_up_summary">Swipe up to collapse the status bar</string>
</resources>
